# goit-pyweb-hw10-django

./: pyproject.toml  scrypts.txt
notes/noteapp/: admin.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py
notes/notes/: settings.py  urls.py
quotes_project/: db.sqlite3  migrate.py
quotes_project/quotes/: forms.py  models.py  urls.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_author_born_location.py  0003_alter_author_birth_date.py  0004_customuser.py
quotes_project/quotes/static/: styles.css
quotes_project/quotes/templates/: add_author.html  add_quote.html  base.html  home.html  quotes_by_tag.html  signup.html
quotes_project/quotes/templates/registration/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.html
quotes_project/quotes/templatetags/: custom_tags.py
quotes_project/quotes_project/: settings.py  urls.py
