[tool.poetry]
name = "goit-pyweb-hw10-django-quotes"
version = "0.1.0"
description = ""
authors = ["Amolit <MikeKukPer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
mongoengine = "^0.28.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
